# tRNA_zap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tRNA_zap.py
Alignment_Functions/: alignment.py
Plotting_Functions/: plotting.py
Supporting_Functions/: supporting_functions.py
configs/: zap_s54_c127.yaml  zap_s54_c49_IVTecoli.yaml  zap_s54_c51_BIOecoli_fragmented.yaml  zap_s54_c51_IVTecoli.yaml  zap_s54_c51_IVTecoli_clsonly.yaml  zap_s54_c51_IVTecoli_fragmented.yaml  zap_s54_c79_BIOyeast_fragmented.yaml  zap_s54_c79_IVTyeast_fragmented.yaml
src/tRNA_zap/: __init__.py  tRNA_zap.py
src/tRNA_zap/splitter/: TODO.md  __init__.py
src/trnazap/: __init__.py  __main__.py  trnazap.py
src/trnazap/aligner/: zap_aligner.py
src/trnazap/cli/: __init__.py  align_cli.py  infer_cli.py  infer_multi_cli.py  label_cli.py  visualize_alignment_cli.py  visualize_cli.py  visualize_inference_cli.py
src/trnazap/config/: model_config.py
src/trnazap/feeders/: __init__.py  collate_fn.py
src/trnazap/inference/: inference_base.py  pod5_inferer.py  single_read_inferer.py
src/trnazap/io/: __init__.py  archive_format.py  archive_reader.py  archive_reader__future.py  archive_reader_old.py  archive_writer.py  archive_writer__future.py  archive_writer_old.py
src/trnazap/label/: ecoli_decoder.pkl  yeast_decoder.pkl  zap_label.py
src/trnazap/model/: __init__.py  transformer_multitask_zam.py  transformer_multitask_zam_clsonly.py  transformer_multitask_zam_frag.py  zap_model.py
src/trnazap/splitter/: __init__.py
src/trnazap/utils/: __init__.py  (+2 more)
(+169 files in other folders)
